# fastapi_projects

./: .gitignore  Dockerfile  README.md  config.py  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  ecs-trust-policy.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync-secrets.sh
.github/ecs/: create_resources_trial.txt  ecs-stack.yml  parameters.json  taskdef.json  test_taskdef.json
.github/workflows/: build-deploy.yml  build-dockerize.yml  build-gh-deploy-aws.yml
.github/workflows/old/: build-deploy.yml  build-gh-deploy-aws.yml
alembic/: env.py
alembic/versions/: d0068441a3a0_build_tables_posts_users_votes.py
app/: calculations.py  database.py  main.py  manual_memory.py  models.py  oauth2.py  psycopg.py  schema.py  schemas.py  utils.py
app/routers/: auth.py  oauth2.py  post.py  user.py  vote.py
ecs/: taskdef.json
tests/: conftest.py  database.py  test_calculations.py  test_posts.py  test_users.py  test_votes.py
