[project]
name = "fastapi-projects"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (==1.4.23)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (<4.1)",
    "python-jose[cryptography] (==3.3.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
